# PeekaReaderReport

./: .gitignore  LICENSE  PACKAGING_GUIDE.md  README.md  TEST_CHECKLIST.md  main.py  main_v2.py  package-lock.json  package.json  progress.md  setup_python_env.py  打包问题解决报告.md
plans/: implementation_plan.md  init_plan.md  python_to_rust_migration_plan.md
plans/Archive/: progress_update.md
src/: app.js  index.html  main.js  main_new.js  main_rust.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python/: __init__.py  analyzer.py  requirements.txt  testanalyzer.py
src-tauri/src/: commands.rs  lib.rs  main.rs  python_analyzer.rs  rust_analyzer.rs  rust_analyzer_simple.rs
src/components/: AnalysisControl.js  ChartGenerator.js  FileSelector.js  InteractiveCharts.js  ResultDisplay.js  RustResultDisplay.js
src/styles/: charts.css  modern.css  rust-results.css
