[package]
name = "readerreport"
version = "0.0.0"
description = "读书报告分析工具"
authors = ["StarDustSeemsInk"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "readerreport_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.24"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
base64 = "0.21"
tauri-plugin-opener = "2.2.7"
tauri-plugin-dialog = "2.0.0-alpha"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
